--- a/mini_project.ipynb
+++ b/mini_project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM9NGwM5Ky6EubJzJhu/eiA",
+      "authorship_tag": "ABX9TyNNyxtopY9GjS+dIUEF6s1s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -149,7 +149,7 @@
         "# Solution assignment one\n",
         "F = 30 #possible degrees in fahrenheit\n",
         "division = 5/9\n",
-        "c = F - 32 * division\n",
+        "c = (F - 32) * division\n",
         "print(c)"
       ],
       "metadata": {
@@ -157,15 +157,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6cciLoaMi-j3",
-        "outputId": "24f5dc73-3930-432e-d569-ce1cf3b47a91"
+        "outputId": "c5a858f0-8cbc-402d-9f30-d00ec931eb3a"
       },
-      "execution_count": 17,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "12.222222222222221\n"
+            "-1.1111111111111112\n"
           ]
         }
       ]
